completed the legal practice section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,62 @@
                 </form>
             </div>
         </section>
+
+    <!-- ===============--- legal practice section ---=============== -->
+    <section id="legal-practice" class="text-center mx-0 px-0 md:w-[60%] md:mx-auto md:my-20">
+        <h1 class="text-3xl font-bold">The Legal Practice Area</h1>
+        <p class="pt-2 pb-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <div class="practices-are grid grid-cols-1 gap-4 md:gap-0 md:grid-cols-2 lg:grid-cols-3">
+            <div class="practice p-4 md:border-b-[.01rem] flex flex-col items-center">
+                <div>
+                    <img class="block mx-auto w-[4rem]" src="./images/business.png" alt="">
+                </div>
+                <h3 class="text-lg font-bold py-2">Business Law</h3>
+                <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
+            </div>
+            <div class="practice p-4 md:bg-gradient-to-b from-gray-100 to-white md:border-[.01rem] md:border-t-0  flex flex-col items-center h-[]">
+                <div>
+                    <img class="block mx-auto w-[3.5rem]" src="./images/criminal.png" alt="">
+                </div>
+                <h3 class="text-lg font-bold py-2">Criminal Law</h3>
+                <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
+            </div>
+            <div class="practice p-4  md:border-b-[.01rem]">
+                <div>
+                    <img class="block mx-auto w-[4.2rem]" src="./images/child.png" alt="">
+                </div>
+                <h3 class="text-lg font-bold py-2">Child Support</h3>
+                <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
+            </div>
+            <div class="practice p-4">
+                <div>
+                    <img class="block mx-auto w-[4.2rem]" src="./images/child.png" alt="">
+                </div>
+                <h3 class="text-lg font-bold py-2">Education Law</h3>
+                <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
+            </div>
+            <div class="practice p-4 md:border-l-[.01rem] md:border-r-[.01rem]">
+                <div>
+                    <img class="block mx-auto w-[4.2rem]" src="./images/child.png" alt="">
+                </div>
+                <h3 class="text-lg font-bold py-2 ">Divorce Law</h3>
+                <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
+            </div>
+            <div class="practice p-4">
+                <img class="block mx-auto w-[4rem]" src="./images/tax.png" alt="">
+                <h3 class="text-lg font-bold py-2">Tax Law</h3>
+                <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    
     </main>
 </body>
 </html>
