--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                       <li><a href="">Contact us</a></li>
                     </ul>
                   </div>
-                  <img src="./images/logo2.png" alt="">
+                  <img class="hidden md:flex" src="./images/logo2.png" alt="">
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
@@ -74,13 +74,13 @@
     <!-- ===============--- home section ---=============== -->
         <section id="we-provide"
         style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.9)), url(./images/banner.png);"
-        class="bg-no-repeat bg-center text-white bg-cover rounded-md my-11 md:w-[80%] md:mx-auto">
-            <div class="we-provide-info text-center p-16">
-                <h1 class="text-5xl font-bold py-8">We Provide Effective<br>Legal Solutions</h1>
-                <p class="py-4 md:w-[60%] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        class="bg-no-repeat bg-center text-white bg-cover rounded-md my-11 mx-2 md:w-[80%] md:mx-auto flex items-center justify-center bg-red-500 py-16">
+            <div class="we-provide-info text-center p-4">
+                <h1 class="text-5xl text-center font-bold py-8">We Provide Effective<br>Legal Solutions</h1>
+                <p class="py-4 md:w-[90%] lg:w-[70] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                 <form action="" class="flex items-center justify-center gap-6 flex-col pt-4 md:flex-row ">
                     <label for="email">
-                        <input class="rounded-md px-4 py-2 w-full outline-none focus:outline-2 outline-[#b68c5a] outline-offset-0 outline-0" type="text" id="text" name="text" placeholder="Search your services">
+                        <input class="rounded-md px-4 py-2 w-full outline-none focus:outline-2 outline-[#b68c5a] outline-offset-0 outline-0" type="text" id="text" name="text" placeholder="Search your services" autocomplete="off">
                     </label>
                     <a class=" text-white font-semibold rounded-md bg-[#B68C5A] px-6 py-2 " href="#">Search</a>
                 </form>
@@ -88,19 +88,19 @@
         </section>
 
     <!-- ===============--- legal practice section ---=============== -->
-    <section id="legal-practice" class="text-center mx-0 px-0 md:w-[60%] md:mx-auto md:my-20">
+        <section id="legal-practice" class="text-center w-[80%] lg:w-[60%] mx-auto md:my-20">
         <h1 class="text-3xl font-bold">The Legal Practice Area</h1>
-        <p class="pt-2 pb-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <p class="pt-2 pb-4 text-xs w-[90%] lg:w-[70%] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
         <div class="practices-are grid grid-cols-1 gap-4 md:gap-0 md:grid-cols-2 lg:grid-cols-3">
-            <div class="practice p-4 md:border-b-[.01rem] flex flex-col items-center">
+            <div class="practice pt-4 pb-2 md:border-b-[.01rem] flex flex-col items-center">
                 <div>
                     <img class="block mx-auto w-[4rem]" src="./images/business.png" alt="">
                 </div>
                 <h3 class="text-lg font-bold py-2">Business Law</h3>
                 <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
+                <img class="w-[2rem] block mx-auto pt-4" src="./images/Frame.png" alt="">
             </div>
-            <div class="practice p-4 md:bg-gradient-to-b from-gray-100 to-white md:border-[.01rem] md:border-t-0  flex flex-col items-center h-[]">
+            <div class="practice pt-4 pb-2 md:bg-gradient-to-b from-gray-100 to-white md:border-[.01rem] md:border-t-0  flex flex-col items-center h-[]">
                 <div>
                     <img class="block mx-auto w-[3.5rem]" src="./images/criminal.png" alt="">
                 </div>
@@ -108,7 +108,7 @@
                 <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                 <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
             </div>
-            <div class="practice p-4  md:border-b-[.01rem]">
+            <div class="practice pt-4 pb-2  md:border-b-[.01rem]">
                 <div>
                     <img class="block mx-auto w-[4.2rem]" src="./images/child.png" alt="">
                 </div>
@@ -116,7 +116,7 @@
                 <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                 <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
             </div>
-            <div class="practice p-4">
+            <div class="practice pt-4 pb-2">
                 <div>
                     <img class="block mx-auto w-[4.2rem]" src="./images/child.png" alt="">
                 </div>
@@ -124,7 +124,7 @@
                 <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                 <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
             </div>
-            <div class="practice p-4 md:border-l-[.01rem] md:border-r-[.01rem]">
+            <div class="practice pt-4 pb-2 md:border-l-[.01rem] md:border-r-[.01rem]">
                 <div>
                     <img class="block mx-auto w-[4.2rem]" src="./images/child.png" alt="">
                 </div>
@@ -132,16 +132,141 @@
                 <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                 <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
             </div>
-            <div class="practice p-4">
+            <div class="practice pt-4 pb-2">
                 <img class="block mx-auto w-[4rem]" src="./images/tax.png" alt="">
                 <h3 class="text-lg font-bold py-2">Tax Law</h3>
                 <p class="text-xs px-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                 <img class="w-[2rem] block mx-auto py-4" src="./images/Frame.png" alt="">
             </div>
         </div>
-    </section>
+        </section>
 
-    
+    <!-- ===============--- clients says section ---=============== -->
+        <section id="what-our-client-say" class="text-center mx-2 px-0 md:w-[80%] md:mx-auto my-20">
+        <h1 class="text-3xl font-bold">What Our Client Say</h1>
+        <p class="text-xs w-[90%] lg:w-[50%] mx-auto pt-2 pb-4 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <div id="default-carousel" class="relative w-full" data-carousel="slide">
+            <!-- Carousel wrapper -->
+            <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                <!-- Item 1 -->
+                <div  style="background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0.4)), url(./images/slider-1.jpg);"  class="hidde duration-700 ease-in-out bg-no-repeat bg-center bg-cover flex items-center justify-center" data-carousel-item>
+                        <div class="info text-white h-auto py-8 md:py-0">
+                            <div class="block mx-auto w-[5rem]">
+                                <img src="./images/Anas.png" alt="">
+                            </div>
+                            <h1 class="text-xl">Ariyan Rahman Anas</h1>
+                            <p class="font-semibold my-1 text-gray-300 md:my-2">Software Engineer</p>
+                            <p class="text-xs w-[95%] md:w-[75%] mx-auto text-gray-400">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                        </div>
+                </div>
+                <!-- Item 2 -->
+                <div  style="background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0.4)), url(./images/slider-1.jpg);"  class="hidde duration-700 ease-in-out bg-no-repeat bg-center bg-cover flex items-center justify-center" data-carousel-item>
+                    <div class="info text-white h-auto py-8 md:py-0">
+                        <div class="block mx-auto w-[5rem]">
+                            <img class="rounded-full bg-indigo-400" src="./images/user1.png" alt="">
+                        </div>
+                        <h1 class="text-xl">Jhone Doe</h1>
+                        <p class="font-semibold my-1 text-gray-300 md:my-2">Software Engineer</p>
+                        <p class="text-xs w-[95%] md:w-[75%] mx-auto text-gray-400">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                    </div>
+                </div>
+                <!-- Item 3 -->
+                <div  style="background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0.4)), url(./images/slider-1.jpg);"  class="hidde duration-700 ease-in-out bg-no-repeat bg-center bg-cover flex items-center justify-center" data-carousel-item>
+                    <div class="info text-white h-auto py-8 md:py-0">
+                        <div class="block mx-auto w-[5rem]">
+                            <img class="rounded-full" src="./images/user-2.png" alt="">
+                        </div>
+                        <h1 class="text-xl">Maisun Nikita Haq</h1>
+                        <p class="font-semibold my-1 text-gray-300 md:my-2">Software Engineer</p>
+                        <p class="text-xs w-[95%] md:w-[75%] mx-auto text-gray-400">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                    </div>
+                </div>
+                <!-- Item 4 -->
+                <div  style="background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0.4)), url(./images/slider-1.jpg);"  class="hidde duration-700 ease-in-out bg-no-repeat bg-center bg-cover flex items-center justify-center" data-carousel-item>
+                    <div class="info text-white h-auto py-8 md:py-0">
+                        <div class="block mx-auto w-[5rem]">
+                            <img src="./images/user-3.png" alt="">
+                        </div>
+                        <h1 class="text-xl">Jerner Evalia</h1>
+                        <p class="font-semibold my-1 text-gray-300 md:my-2">Software Engineer</p>
+                        <p class="text-xs w-[95%] md:w-[75%] mx-auto text-gray-400">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Slider indicators -->
+            <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
+                <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
+                <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
+                <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
+                <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
+            </div>
+            <!-- Slider controls -->
+            <button type="button" class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+                <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                    <svg class="w-4 h-4 text-white dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+                    </svg>
+                    <span class="sr-only">Previous</span>
+                </span>
+            </button>
+            <button type="button" class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+                <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                    <svg class="w-4 h-4 text-white dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                    </svg>
+                    <span class="sr-only">Next</span>
+                </span>
+            </button>
+        </div>
+        </section>
+
+    <!-- ===============--- FAQ-section ---=============== -->
+        <section id="FAQ-section" class=" my-20 w-[80%] lg:w-[60%] mx-auto">
+            <h1 class="text-center text-3xl font-bold">Frequently Asked Any Questions</h1>
+            <p class="text-xs text-center pt-2 pb-4 w-[90%] lg:w-[70%] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+            <div class="all-content mx-2 flex items-start justify-between flex-col-reverse gap-4 md:flex-row">
+                <div class="questions flex-1">
+                    <div class="collapse collapse-plus bg-base-200 mb-4">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Click to open this one and close others
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Bomb!<br>Iye lo, tumhari liye le aayi hu 🎁!</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus bg-base-200 mb-4">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Click to open this one and close others
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Bomb!<br>Iye lo, tumhari liye le aayi hu 🎁!</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Click to open this one and close others
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Bomb!<br>Iye lo, tumhari liye le aayi hu 🎁!</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="banner flex-1 ">
+                    <!-- <div class="bg-ed-300 w-full h-full borderred-500 border-2 hidden lg:flex"></div> -->
+                    <div class="all-content mx-auto">
+                        <img class="w-[100%]" src="./images/faq.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
 </body>
 </html>
